add: show enemies coords progress

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "author": "Adrián Montemayor Carlín",
     "dependencies": {
         "discord.io": "https://github.com/woor/discord.io/tarball/gateway_v6",
+        "discord.js": "^12.5.3",
+        "nodemon": "^2.0.7",
         "winston": "^3.3.3"
     }
 }
